Code fix
Finish fixing code smells based on SonarLint.

All tests passed.